Fix bug which aligned the RPG Stuff header to the left

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ html {
   color: #888;
 }
 
-h1 {
+.story h1 {
   line-height: 30px;
   display: inline-block;
 }
